Give compiler arguments + use idea-ext plugin to resolve them for IDEA