@@ -12,6 +12,10 @@ buildscript {
     }
 }
 
+plugins {
+    id 'org.jetbrains.gradle.plugin.idea-ext' version '1.1.7'
+}
+
 import com.cleanroommc.gradle.helpers.tasks.*
 
 import groovy.json.JsonBuilder
@@ -60,6 +64,11 @@ def jvm_arguments = [
         '--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED',
         '--add-opens=java.base/java.lang=ALL-UNNAMED',
         '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
+]
+
+def compiler_jvm_arguments = [
+        '--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED',
+        '--add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED'
 ]
 // Projects
 
@@ -1043,6 +1052,12 @@ project(':cleanroom') {
         }
     }
 }
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += compiler_jvm_arguments
+}
+
+idea.project.settings.compiler.javac.javacAdditionalOptions = compiler_jvm_arguments.join(' ')
 
 task setup() {
     group 'setup'
